canvas Objects individualisierbar

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -19,7 +19,7 @@
 <body>
   <!--Hier sollen die Verschiedenen Grundstrtukturen Programmiert werden, die am Ende dymanisch aufgebaut werden.-->
 
-  <!--welcomeMSG-->
+  <!--welcomeMSG
   <section class="endabgabe">
     <main class="end-bg borderInset" style="width: 25%;">
       <header class="end-bg header">
@@ -57,7 +57,7 @@
     </main>
   </section>
 
-  <!--Login in Panel-->
+  <!--Login in Panel-
   <section class="endabgabe">
     <main class="end-bg borderInset" style="width: 25%;">
       <header class="end-bg header">
@@ -105,8 +105,8 @@
       </section>
     </main>
   </section>
-
-  <!--Picture List Panel-->
+-->
+  <!--Picture List Panel-
   <section class="endabgabe">
     <main class="end-bg borderInset" style="width: 25%;">
       <header class="end-bg header">
@@ -151,8 +151,8 @@
         </section>
     </main>
   </section>
-
-  <!--Register New User Panel-->
+-->
+  <!--Register New User Panel
   <section class="endabgabe">
     <main class="end-bg borderInset" style="width: 25%;">
       <header class="end-bg header">
@@ -202,8 +202,8 @@
       </section>
     </main>
   </section>
-
-  <!--Das menü für die Voreinstellngen der Canvas-->
+-->
+  <!--Das menü für die Voreinstellngen der Canvas
   <section class="endabgabe">
     <main class="end-bg borderInset" style="width: 25%;">
       <header class="end-bg header">
@@ -254,7 +254,7 @@
         </section>
       </section>
     </main>
-  </section>
+  </section> -->
 
 
   <!-- MAIN Canvas -->
@@ -287,7 +287,7 @@
                 <button class="end-bg borderInset toolsStyle" id="squareButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/square.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/circle.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/triangle.png?raw=true" width="20px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id=" "><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/special.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="moverButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/Mover.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="deleteButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/text.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/pencil.png?raw=true" width="20px" alt=""></button>
@@ -307,7 +307,7 @@
             <button class="norm-button" id="goBackToOverview">Quit</button>
             <form oninput="x.value=parseInt(objectScale.value)" oninput="y.value=parseInt(animSpeed.value)" > 
               <label for="objectColor">Object Color</label>
-              <input type="color" id="objectColor" name="canvobjectColoras" value="#ffffff" required><br>
+              <input type="color" id="objectColor" name="canvobjectColoras" value="#000000" required><br>
               <label for="objectScale">Object Scale</label>
               <input type="range" min="1" max="7"  id="objectScale" name="objectScale" value="2" required><output name="x" for="objectScale">2</output> <br>
               <label for="cars">Choose a Animation Style:</label>
