einrichtung delete Picture funktion

--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -302,6 +302,7 @@
         <section class="end-bg footer">
           <section class="footerInner">
             <button class="norm-button" id="savePicture">Save Picture</button>
+            <button class="norm-button" id="deletePicture">Delete Picture</button>
             <button class="norm-button" id="startAnim">Start Animation</button>
             <button class="norm-button" id="stopAnim">Stop Animation</button>
             <button class="norm-button" id="goBackToOverview">Quit</button>
