--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -288,7 +288,7 @@
                 <button class="end-bg borderInset toolsStyle" id="circleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/circle.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="triangleButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/triangle.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="moverButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/Mover.png?raw=true" width="20px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id="deleteButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="deleteObjectButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/text.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/pencil.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/misc1.png?raw=true" width="20px" alt=""></button>
