verlinkung neue js files in indexhtml

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="./2_Programm/CSS/stylesheet.css">
     <script src="./2_Programm/JS/client.js"></script>
     <script src="./2_Programm/JS/HTMLData.js"></script>
-    <!--<script src="./2_Programm/JS/canvas.js"></script>-->
-    <!--<script src="./2_Programm/JS/HTMLData.js"></script>-->
-    <!--<script src="./2_Programm/JS/database.js"></script>-->
+    <script src="./2_Programm/JS/canvas.js"></script>
+    <script src="../../2_Programm/Objekte/cls_PlaceableObjects.js"></script>
+    <script src="../../2_Programm/Objekte/obj_circle.js"></script>
+    <script src="../../2_Programm/Objekte/obj_square.js"></script>
+    <script src="../../2_Programm/Objekte/obj_triangel.js"></script>
+
 </head>
 <body>
 <!--
