--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -229,10 +229,10 @@
               <form class="loginForm">
                 <label for="canvasName">Name your Picture</label><br>
                 <input type="text" id="canvasName" name="canvasName" maxlength="30" required><br>
-                <label for="xsize">X-size in Pixels (100-1500)</label><br>
-                <input type="number" id="xsize" name="xsize"  min="100" max="1500" value="1500" required><br>
-                <label for="ysize">Y-size in Pixels (100-1500)</label><br>
-                <input type="number" id="ysize" name="ysize" min="100" max="1500" value="1500" required><br>
+                <label for="xsize">X-size in Pixels (500-1500)</label><br>
+                <input type="number" id="xsize" name="xsize"  min="500" max="1500"  required><br>
+                <label for="ysize">Y-size in Pixels (500-1500)</label><br>
+                <input type="number" id="ysize" name="ysize" min="500" max="1500"  required><br>
                 <label for="colorhex">Choose your canvas color</label><br>
                 <input type="color" id="colorhex" name="colorhex" value="#ffffff" required><br><br>
               </form>
