new try sending the placeable objest array with %22

--- a/01_Endabgabe_v2/index.html
+++ b/01_Endabgabe_v2/index.html
@@ -24,16 +24,13 @@ Datum: 04.08.2020
 Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. 
 */-->
 
-    <header>
+    <section>
         <h1>Welcome to Rude MS Paint V1.2.4.12.</h1>
         <h2>Eine Endabgabe von Iven Otis Sieglen im Fach Entwicklung Interaktiver Anwendungen 2 </h2>
-    </header>
-    <main id="htmlBox">
+    </section>
+    <section id="htmlBox">
 
-    </main>
-    <footer>
-
-    </footer>
+    </section>
     
 </body>
 </html>
