--- a/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
+++ b/01_Endabgabe_v2/1_Konzept/Grund HTML/konzept.html
@@ -291,7 +291,7 @@
                 <button class="end-bg borderInset toolsStyle" id="deleteObjectButt" ><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/rubber.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/text.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id="sprayerButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/pencil.png?raw=true" width="20px" alt=""></button>
-                <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/misc1.png?raw=true" width="20px" alt=""></button>
+                <button class="end-bg borderInset toolsStyle" id="resizerButt"><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/misc1.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/line2.png?raw=true" width="20px" alt=""></button>
                 <button class="end-bg borderInset toolsStyle" id=""><img src="https://github.com/ivenios/EIA2/blob/master/01_Endabgabe_v2/3_IMG/line1.png?raw=true" width="20px" alt=""></button>
                 
